# browsingBuddy

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
firefox-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
src/browsingassistant/: __init__.py  api.py  gemini.py  server.py  state.py
